--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     background-position: center;
     /* bg prewed */
     z-index: -1;
-    filter: grayscale();
+    filter: blur(2.5px);
 
 }
 
@@ -65,7 +65,7 @@ body {
 }
 
 .mynavbar .offcanvas {
-    height: 100vh;
+    height: 80vh;
 }
 .mynavbar .navbar-brand,
 .mynavbar .offcanvas-title {
@@ -83,8 +83,8 @@ body {
     background-size: cover;
     min-height: 100vh;
     margin-top: -6rem;
-    padding-top: 10rem;
-    padding-bottom: 5rem;
+    padding-top: 16rem;
+    padding-bottom: 8rem;
 }
 
 
@@ -99,22 +99,31 @@ body {
 .home h3 {
     color: #444;
     font-size: 1.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2.5rem;
 }
 
-.home p, .gallery p {
-    font-size: 1.1rem;
+.home p {
+    font-size: 1.5rem;
     color: 666;
 }
 
+.gallery p {
+    font-size: 1.1rem;
+    color: 666;
+}
 .home .couple{
-    margin-top: 100px;
+    margin-top: 10rem;
+
+}
+.home .couple img{
+    margin-top: 5rem;
 
 }
 .home .couple h3 {
     font-family: 'Sacramento';
-    font-size: 2.5rem;
+    font-size: 4rem;
     color: var(--pink);
+    margin-top: 5rem;
 }
 
 .home .couple img {
@@ -130,7 +139,7 @@ body {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     position: absolute;
     left: 50%;
-    transform: translateX(-50%) translateY(65px);
+    transform: translateX(-50%) translateY(150px);
     
 }
 
@@ -141,49 +150,51 @@ body {
 
 .info{
     background-color: #f5f5f5;
-    
     padding-top: 10rem;
     padding-bottom: 8rem;
 }
 
-.info h2, .gifts h2 {
+.info h2 {
     font-family: 'Sacramento';
     color: var(--pink);
     font-size: 5rem;
     font-weight: bold;
 }
 
+.gifts h2 {
+    font-family: 'Sacramento';
+    color: var(--pink);
+    font-size: 5rem;
+    font-weight: bold;
+}
 .info .alamat {
-    font-size: 1rem;
+    font-size: 1.5rem;
+    padding: 2.5rem;
 }
 
 .info .description {
-    font-size: 1rem;
-    font-weight: 300;
+    font-size: 1.5rem;
+    /* font-weight: 300; */
 }
 
-/* .info .card {
-    background-color: rgba(255, 255, 255, 0.2) !important; 
-    color: white !important;
-    border: 1px solid #999;
+.info .card {
+    padding: 1.5 ;
+    margin: 1.5rem;
+    /* text-transform: uppercase; */
+    font-size: 1.5rem;
 
+}
+
+/* .info .card .header {
+    background-color: #0a0a0a;
+    text-transform: uppercase !important;
+    letter-spacing: 0.1rem;
+    font-size: 1.5rem;
+    font-weight: bold;
 } */
 
-.info .card .header {
-    /* border-bottom: 1px solid #999; */
-    text-transform: uppercase;
-    letter-spacing: 0.1rem;
-}
-
 .info .card .body {
-    font-size: 1rem;
-}
-
-.info .card .footer {
-    border-top: 1px solid #999;
-    font-size: 1rem;
-    font-weight: 0.9rem;
-    font-weight: 300;
+    font-size: 5rem;
 }
 
 .gallery {
@@ -202,9 +213,13 @@ body {
 }
 
 .gifts p {
-    font-size: 1rem;
-    font-weight: 300;
+    font-size: 1.5rem;
+    /* font-weight: 300; */
     
+}
+
+.gifts .list-group{
+    font-size: 1.5rem;
 }
 
 #reactions__container {
@@ -244,7 +259,7 @@ footer li {
     right: 2rem;
     cursor: pointer;
     opacity: 0.5;
-    mix-blend-mode: difference;
+    /* mix-blend-mode: difference; */
     animation: rotating  4s linear infinite;
     transform-origin: center;
     display: flex;
