--- a/style.css
+++ b/style.css
@@ -89,7 +89,13 @@ body {
 
 
 
-.home h2, .gallery h2 {
+.home h2 {
+    color: var(--pink);
+    font-family: 'Sacramento';
+    font-size: 5rem;
+    font-weight: bold;
+}
+.gallery h2 {
     color: var(--pink);
     font-family: 'Sacramento';
     font-size: 5rem;
@@ -185,13 +191,6 @@ body {
 
 }
 
-/* .info .card .header {
-    background-color: #0a0a0a;
-    text-transform: uppercase !important;
-    letter-spacing: 0.1rem;
-    font-size: 1.5rem;
-    font-weight: bold;
-} */
 
 .info .card .body {
     font-size: 5rem;
